fix z-indexing issue of open external link on top of product switcher in mobile view

--- a/src/style/single-page.css
+++ b/src/style/single-page.css
@@ -87,7 +87,7 @@
   left: 0;
   right: 0;
   display: flex;
-  z-index: 1;
+  z-index: 2;
   background: rgba(255, 255, 255, 1);
   border-top: 1px solid rgba(0, 0, 0, 0.12);
   opacity: 0;
